Simplify openapi setup
